<resources>
    <string name="app_name">WeatherApp</string>
    <string name="get_weather_btn">Get</string>
    <string name="details">Details</string>
    <string name="celsium">°</string>
    <string name="khp"> Khp</string>
    <string name="persent"> %</string>
    <string name="days_weather"> Day Weather</string>
    <string name="line">/</string>
    <string name="mm"> mm</string>
    <string name="hpa"> hPa</string>
    <string name="city_name">Odessa, Ukraine</string>
    <string name="temp">27</string>
    <string name="temp_min">Min 27°C</string>
    <string name="hourly">Hourly weather:</string>
    <string name="temp_max">Max 27°C</string>
    <string name="date">28.03</string>
    <string name="weather">Cloudy</string>
    <string name="cloudy">Cloudy</string>
    <string name="pressure">Pressure</string>
    <string name="uv_index">UV Index</string>
    <string name="uv_low">Moderate level, you can walk freely in the open sun</string>
    <string name="uv_middle">Medium level, limit time in the sun</string>
    <string name="uv_high">High level, not recommended to go outside</string>
    <string name="enter_city_label">Enter city…</string>
    <string name="feels_like">Feels like</string>
    <string name="feels_like_text_same">It feels like a real temperature</string>
    <string name="feels_like_text_cooler">The wind makes the weather seem cooler</string>
    <string name="feels_like_text_warmer">It feels warmer than the actual temperature</string>
    <string name="wind_speed">Wind speed</string>
    <string name="wind_Calm">Smoke rises vertically. Sea like a mirror</string>
    <string name="wind_Light">Leaves and small twigs in constant motion; light flags extended</string>
    <string name="wind_LightAir">Direction shown by smoke drift but not by wind vanes</string>
    <string name="wind_LightBreeze">Wind felt on face; leaves rustle; wind vane moved by wind</string>
    <string name="wind_Moderate">Raises dust and lose paper; small branches moved</string>
    <string name="wind_FreshBreeze">Small trees in leaf begin to sway</string>
    <string name="wind_StrongBreeze">Large branches in motion; whistling heard in telegraph wires</string>
    <string name="wind_Gale">Twigs break off trees; generally impedes progress</string>
    <string name="wind_StrongGale">Slight structural damage (chimney pots and slates removed)</string>
    <string name="wind_Storm">Seldom experienced inland; trees uprooted; considerable structural damage</string>
    <string name="wind_Hurricane">Devastation. Air filled with foam and spray, very poor visibility</string>
    <string name="humidity">Humidity</string>
    <string name="visibility">Visibility</string>
    <string name="visibility_clear">It is absolutely clear at the moment</string>
    <string name="visibility_low">Visibility was slightly reduced due to clouds</string>
    <string name="visibility_middle">Poor visibility due to clouds</string>
    <string name="visibility_high">Very poor visibility because of the clouds</string>
    <string name="precipitation">Precipitation</string>
    <string name="precipitation_none">No precipitation expected for the next 24 hours</string>
    <string name="precipitation_low">In the next 24 hours we expect light precipitation</string>
    <string name="precipitation_middle">Average precipitation expected in the next 24 hours</string>
    <string name="precipitation_high">Heavy rainfall expected in the next 24 hours</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="get">Get</string>
    <string name="img_weather">img_weather</string>


</resources>