<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/hour"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/data_background"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtTime"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="sans-serif-light"
            android:gravity="center_horizontal"
            android:text="@string/date"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center">

            <TextView
                android:id="@+id/txtHourTemperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="@string/temp"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/txtHourLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="@string/celsium"
                android:textSize="28sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/txtHourWeather"
            android:layout_width="120dp"
            android:layout_height="25dp"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:text="@string/cloudy"
            android:textSize="14sp"
            android:ellipsize="end"
            android:maxLines="1"
            android:paddingStart="3dp"
            android:paddingEnd="3dp"
            tools:ignore="TextSizeCheck" />

        <ImageView
            android:id="@+id/imgHour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/img_weather"
            android:maxHeight="35dp"
            android:src="@drawable/weather_icon" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>