<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0B1221"
    android:pointerIcon="zoom_in"
    tools:context=".presentation.MainActivity" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:id="@+id/currentWeatherLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical"
                android:padding="15dp"
                android:visibility="visible">

                <TextView
                    android:id="@+id/txtCityName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/city_name"
                    android:textSize="30sp"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/txtDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/date"
                    android:textSize="18sp"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/txtTemperature"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="25dp"
                    android:gravity="center"
                    android:text="@string/temp"
                    android:textSize="70sp"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/txtWeather"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:gravity="center"
                    android:text="@string/weather"
                    android:textSize="40sp"
                    android:visibility="visible" />

                <LinearLayout
                    android:id="@+id/min_max_temp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="25dp"
                    android:gravity="center_horizontal">

                    <TextView
                        android:id="@+id/txtMinTemperature"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="30dp"
                        android:gravity="center"
                        android:text="@string/temp_min"
                        android:visibility="visible" />

                    <TextView
                        android:id="@+id/txtMaxTemperature"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:gravity="center"
                        android:text="@string/temp_max"
                        android:visibility="visible" />


                </LinearLayout>

            </LinearLayout>

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/additionalItems"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="false"
                    android:padding="15dp"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:spanCount="2"
                    tools:itemCount="8"
                    tools:listitem="@layout/details_item_layout" />
            </androidx.core.widget.NestedScrollView>
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>