<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp">

    <LinearLayout
        android:id="@+id/day"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/data_background"
        android:gravity="center"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:fontFamily="sans-serif-condensed-light"
            android:gravity="center_horizontal"
            android:text="@string/date"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/maxTemp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:paddingEnd="3dp">

                <TextView
                    android:id="@+id/txtDayMaxTemperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:text="@string/temp"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/txtDayMaxCelsiumLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:text="@string/celsium"
                    android:textSize="24sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/txtLine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif-light"
                android:text="@string/line"
                android:textSize="24sp" />

            <LinearLayout
                android:id="@+id/minTemp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingStart="3dp">

                <TextView
                    android:id="@+id/txtDayMinTemperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:text="@string/temp"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/txtDayMinTemperatureLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="0dp"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:text="@string/celsium"
                    android:textSize="24sp" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/txtDayWeather"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-condensed-light"
            android:gravity="center"
            android:text="@string/cloudy"
            android:textSize="14sp"
            tools:ignore="TextSizeCheck" />

        <ImageView
            android:id="@+id/imgDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/img_weather"
            android:src="@drawable/weather_icon" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>