<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".view.MainWeatherInfoFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/currentWeatherLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:orientation="vertical"
            android:padding="15dp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/txtCityName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/city_name"
                android:textSize="30sp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/txtDateNow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/date"
                android:textSize="18sp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/txtTemperature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_marginTop="35dp"
                android:gravity="center"
                android:text="@string/temp"
                android:textSize="70sp"
                android:visibility="visible" />

            <TextView
                android:id="@+id/txtWeather"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:gravity="center"
                android:text="@string/weather"
                android:textSize="40sp"
                android:visibility="visible" />

            <LinearLayout
                android:id="@+id/min_max_temp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="35dp"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/txtMinTemperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    android:gravity="center"
                    android:text="@string/temp_min"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/txtMaxTemperature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:gravity="center"
                    android:text="@string/temp_max"
                    android:visibility="visible" />


            </LinearLayout>

        </LinearLayout>

        <HorizontalScrollView
            android:id="@+id/forecastLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/currentWeatherLayout">

            <LinearLayout
                android:id="@+id/forecastLayoutInner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:baselineAligned="false"
                android:gravity="center|fill"
                android:orientation="horizontal"
                android:paddingEnd="25dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/currentWeatherLayout">

                <LinearLayout
                    android:id="@+id/secondDay"
                    android:layout_width="140dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/data_background"
                    android:orientation="vertical"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp">

                    <TextView
                        android:id="@+id/txt2DayLabel"
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="10dp"
                        android:gravity="center_horizontal"
                        android:text="@string/date"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/txt2DayTemperature"
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp"
                        android:gravity="center"
                        android:text="@string/temp"
                        android:textSize="28sp" />

                    <TextView
                        android:id="@+id/txt2DayWeather"
                        android:layout_width="140dp"
                        android:layout_height="55dp"
                        android:gravity="center"
                        android:text="@string/cloudy"
                        android:textSize="14sp"
                        tools:ignore="TextSizeCheck" />

                    <ImageView
                        android:id="@+id/img2Day"
                        android:layout_width="140dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/weather_icon" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/thirthDay"
                    android:layout_width="140dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/data_background"
                    android:orientation="vertical"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp">

                    <TextView
                        android:id="@+id/txt3DayLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="10dp"
                        android:gravity="center_horizontal"
                        android:text="@string/date"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/txt3DayTemperature"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/temp"
                        android:textSize="28sp" />

                    <TextView
                        android:id="@+id/txt3DayWeather"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:gravity="center"
                        android:text="@string/weather"
                        android:textSize="14sp"
                        tools:ignore="TextSizeCheck" />

                    <ImageView
                        android:id="@+id/img3Day"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/weather_icon" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/fourthDay"
                    android:layout_width="140dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/data_background"
                    android:orientation="vertical"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp">

                    <TextView
                        android:id="@+id/txt4DayLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="10dp"
                        android:gravity="center_horizontal"
                        android:text="@string/date"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/txt4DayTemperature"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/temp"
                        android:textSize="28sp" />

                    <TextView
                        android:id="@+id/txt4DayWeather"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:gravity="center"
                        android:text="@string/weather"
                        android:textSize="14sp"
                        tools:ignore="TextSizeCheck" />

                    <ImageView
                        android:id="@+id/img4Day"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/weather_icon" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/fiveDay"
                    android:layout_width="140dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/data_background"
                    android:orientation="vertical"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp">

                    <TextView
                        android:id="@+id/txt5DayLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="10dp"
                        android:gravity="center_horizontal"
                        android:text="@string/date"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/txt5DayTemperature"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/temp"
                        android:textSize="28sp" />

                    <TextView
                        android:id="@+id/txt5DayWeather"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:gravity="center"
                        android:text="@string/weather"
                        android:textSize="14sp"
                        tools:ignore="TextSizeCheck" />

                    <ImageView
                        android:id="@+id/img5Day"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/weather_icon" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/sixDay"
                    android:layout_width="140dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/data_background"
                    android:orientation="vertical"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp">

                    <TextView
                        android:id="@+id/txt6DayLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="10dp"
                        android:gravity="center_horizontal"
                        android:text="@string/date"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/txt6DayTemperature"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/temp"
                        android:textSize="28sp" />

                    <TextView
                        android:id="@+id/txt6DayWeather"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:gravity="center"
                        android:text="@string/weather"
                        android:textSize="14sp"
                        tools:ignore="TextSizeCheck" />

                    <ImageView
                        android:id="@+id/img6Day"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/weather_icon" />
                </LinearLayout>
            </LinearLayout>
        </HorizontalScrollView>
    </LinearLayout>
</FrameLayout>